# mysite2014

./: .gitignore  about.markdown  about.rst  bower.json  contact.markdown  contact.md  index.html  index.markdown  index.md  keybase.txt  mysite2014.cabal  site.hs  stack.yaml  talks.md
css/: default.css
posts/: 2014-05-13-helloworld.md  2014-05-13-wiki-extens.markdown  2014-05-13-wiki-extens.md  2015-10-01-porting-pusher-tests-haskell.markdown  2015-10-01-porting-pusher-tests-haskell.md  2015-10-29-hackdays-hits-connecting-pusher-slack-spotify-and-sonos.md  2016-01-23-unit-test-io-in-haskell.markdown  2016-01-23-unit-test-io-in-haskell.md  2016-02-16-haskell-performance.markdown  2016-02-16-haskell-performance.md  2016-03-08-3-approaches-to-monadic-api-design-in-haskell.md  2016-03-31-fuzz-testing-distributed-systems-with-quickcheck.md  2016-04-16-haskell-concurrency.md  2016-12-21-golangs-real-time-gc-in-theory-and-practice.md  2017-04-06-go-tool-trace.md  2017-09-17-per-ip-rate-limiting-with-iptables.md  2018-01-25-alternatives-to-sum-types-in-go.md  2018-05-22-ephemeral-port-exhaustion-and-how-to-avoid-it.md  2019-10-31-hot-sre-trends-in-2019.md  2020-03-13-debugging-mysql-replication-lag.md  2020-08-05-how-pusher-unified-the-product-dashboards.md  2021-02-21-counting-connections-at-scale.md  2022-02-15-what-are-your-companys-anti-values.md  2022-05-16-how-monzo-deploy-to-production-over-100-times-a-day.md  2022-11-07-argo-rollouts-at-scale.md  2024-08-27-how-monzo-run-migrations-across-2800-microservices.md
templates/: blog.html  default.html  post-list.html
